React.Net/reactweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: reactappconntainnerregistry.azurecr.io/react-webapp:latest
        ports:
        - containerPort: 3000
